--- a/index.html
+++ b/index.html
@@ -362,6 +362,30 @@
 							<span class="stack-text">@KylePhillipsFUN</span>
 						</a>
 					</div>					
+					<div class="stack-item">
+						<a class="stack-link" href="https://twitter.com/ccarrollbeard">
+							<img class="stack-image" src="https://pbs.twimg.com/profile_images/1182763421563064321/FF6goLWx_400x400.jpg"></img>
+							<span class="stack-text">@ccarrollbeard</span>
+						</a>
+					</div>												
+					<div class="stack-item">
+						<a class="stack-link" href="https://twitter.com/FayeMata">
+							<img class="stack-image" src="https://pbs.twimg.com/profile_images/1267745841495736320/WEXGHe4d_400x400.jpg"></img>
+							<span class="stack-text">@FayeMata</span>
+						</a>
+					</div>												
+					<div class="stack-item">
+						<a class="stack-link" href="https://twitter.com/BKarbowski">
+							<img class="stack-image" src="https://pbs.twimg.com/profile_images/1235623133153017856/Ng9BKgrz_400x400.jpg"></img>
+							<span class="stack-text">@BKarbowski</span>
+						</a>
+					</div>												
+					<div class="stack-item">
+						<a class="stack-link" href="https://twitter.com/KrisComics">
+							<img class="stack-image" src="https://pbs.twimg.com/profile_images/1273019410194878464/MLECWCBZ_400x400.jpg"></img>
+							<span class="stack-text">@KrisComics</span>
+						</a>
+					</div>												
 				</div>	
 				<div class="right-side-item stack-list-container">
 					<h3 class="stack-heading">For Collections</h3>				
