--- a/index.html
+++ b/index.html
@@ -177,12 +177,14 @@
 						<div class="tile"><a href="https://kitsu.io/anime/wakfu-the-animated-series"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/8299/large.jpg?1418849115" alt="Wakfu"></img></a></div>
 						<div class="tile"><a href="https://kitsu.io/anime/samurai-jack"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/7939/large.jpg?1416275562" alt="Samurai Jack"></img></a></div>
 						<div class="tile"><a href="https://www.imdb.com/title/tt2861424/?ref_=nv_sr_1"><img class="thumbnail" src="assets/images/thumbnails/rick-and-morty.png" alt="Rick and Morty"></img></a></div>
+												<div class="tile"><a href="https://www.imdb.com/title/tt7658402/?ref_=nv_sr_srsg_3"><img class="thumbnail" src="assets/images/thumbnails/harley-quinn.png" alt="Harley Quinn "></img></a></div>
 						<div class="tile"><a href="https://www.imdb.com/title/tt0149460/?ref_=nv_sr_1"><img class="thumbnail" src="assets/images/thumbnails/futurama.png" alt="Futurama"></img></a></div>
 						<div class="tile"><a href="https://www.imdb.com/title/tt1486217/?ref_=nv_sr_1"><img class="thumbnail" src="assets/images/thumbnails/archer.png" alt="Archer"></img></a></div>						
 						<div class="tile"><a href="https://kitsu.io/anime/teen-titans"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/7928/large.jpg?1416275545" alt="Teen Titans"></img></a></div>						
 						<div class="tile"><a href="https://www.imdb.com/title/tt0366005/"><img class="thumbnail" src="assets/images/thumbnails/dannyphantom.png" alt="Danny Phantom"></img></a></div>
-						<div class="tile"><a href="https://kitsu.io/anime/xiaolin-showdown"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/7931/large.jpg?1408462962" alt="Xiaolin Showdown"></img></a></div>
 						<div class="tile"><a href="https://kitsu.io/anime/code-lyoko"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/7930/large.jpg?1408462959" alt="Code Lyoko"></img></a></div>
+
+						<!--<div class="tile"><a href="https://kitsu.io/anime/xiaolin-showdown"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/7931/large.jpg?1408462962" alt="Xiaolin Showdown"></img></a></div>-->						
 					</div>
 				</div><!--Other Animated Series-->
 
