--- a/index.html
+++ b/index.html
@@ -348,43 +348,43 @@
 					</div>
 					<div class="stack-item">
 						<a class="stack-link" href="https://twitter.com/CliffordChapin">
-							<img class="stack-image" src="https://pbs.twimg.com/profile_images/1216553666141925381/6euUqClb_400x400.jpg"></img>
+							<img class="stack-image" src="assets/images/icons/twitterpropic-CliffordChapin.jpg"></img>
 							<span class="stack-text">@CliffordChapin</span>
 						</a>
 					</div>		
 					<div class="stack-item">
 						<a class="stack-link" href="https://twitter.com/MarissaLenti">
-							<img class="stack-image" src="https://pbs.twimg.com/profile_images/1267513418443034624/wGt7VtMk_400x400.jpg"></img>
+							<img class="stack-image" src="assets/images/icons/twitterpropic-MarissaLenti.jpg"></img>
 							<span class="stack-text">@MarissaLenti</span>
 						</a>
 					</div>					
 					<div class="stack-item">
 						<a class="stack-link" href="https://twitter.com/KylePhillipsFUN">
-							<img class="stack-image" src="https://pbs.twimg.com/profile_images/1268298004483772417/h2BgdS-U_400x400.jpg"></img>
+							<img class="stack-image" src="assets/images/icons/twitterpropic-KylePhillipsFUN.jpg"></img>
 							<span class="stack-text">@KylePhillipsFUN</span>
 						</a>
 					</div>					
 					<div class="stack-item">
 						<a class="stack-link" href="https://twitter.com/ccarrollbeard">
-							<img class="stack-image" src="https://pbs.twimg.com/profile_images/1182763421563064321/FF6goLWx_400x400.jpg"></img>
+							<img class="stack-image" src="assets/images/icons/twitterpropic-ccarrollbeard.jpg"></img>
 							<span class="stack-text">@ccarrollbeard</span>
 						</a>
 					</div>												
 					<div class="stack-item">
 						<a class="stack-link" href="https://twitter.com/FayeMata">
-							<img class="stack-image" src="https://pbs.twimg.com/profile_images/1267745841495736320/WEXGHe4d_400x400.jpg"></img>
+							<img class="stack-image" src="assets/images/icons/twitterpropic-FayeMata.jpg"></img>
 							<span class="stack-text">@FayeMata</span>
 						</a>
 					</div>												
 					<div class="stack-item">
 						<a class="stack-link" href="https://twitter.com/BKarbowski">
-							<img class="stack-image" src="https://pbs.twimg.com/profile_images/1235623133153017856/Ng9BKgrz_400x400.jpg"></img>
+							<img class="stack-image" src="assets/images/icons/twitterpropic-BKarbowski.jpg"></img>
 							<span class="stack-text">@BKarbowski</span>
 						</a>
 					</div>												
 					<div class="stack-item">
 						<a class="stack-link" href="https://twitter.com/KrisComics">
-							<img class="stack-image" src="https://pbs.twimg.com/profile_images/1273019410194878464/MLECWCBZ_400x400.jpg"></img>
+							<img class="stack-image" src="assets/images/icons/twitterpropic-KrisComics.jpg"></img>
 							<span class="stack-text">@KrisComics</span>
 						</a>
 					</div>												
@@ -528,61 +528,61 @@
 					<h3 class="stack-heading">Anipics on Twitter</h3>
 					<div class="stack-item">
 						<a class="stack-link" href="https://twitter.com/jeonghee1414">
-							<img class="stack-image" src="https://pbs.twimg.com/profile_images/1206565154265022465/5gW2b9qE_400x400.jpg"></img>
+							<img class="stack-image" src="assets/images/icons/twitterpropic-jeonghee1414.jpg"></img>
 							<span class="stack-text">モ誰 @jeonghee1414</span>
 						</a>
 					</div>
 					<div class="stack-item">
 						<a class="stack-link" href="https://twitter.com/Cheon1986">
-							<img class="stack-image" src="https://pbs.twimg.com/profile_images/1129038158245617666/eCAhjvIE_400x400.png"></img>
+							<img class="stack-image" src="assets/images/icons/twitterpropic-Cheon1986.png"></img>
 							<span class="stack-text">HxxG / ホン @Cheon1986</span>
 						</a>
 					</div>																	
 					<div class="stack-item">
 						<a class="stack-link" href="https://twitter.com/hitsukuya/media">
-							<img class="stack-image" src="https://pbs.twimg.com/profile_images/1143037931764047872/s-wgwjvK_400x400.png"></img>
+							<img class="stack-image" src="assets/images/icons/twitterpropic-hitsukuya.JPG "></img>
 							<span class="stack-text">Hitsu @hitsukuya</span>
 						</a>
 					</div>												
 					<div class="stack-item">
 						<a class="stack-link" href="https://twitter.com/mychristian2">
-							<img class="stack-image" src="https://pbs.twimg.com/profile_images/1274717457102434306/_CmJr9G9_400x400.jpg"></img>
+							<img class="stack-image" src="assets/images/icons/twitterpropic-mychristian2.jpg"></img>
 							<span class="stack-text">사야*SAYA*さや @mychristian2</span>
 						</a>
 					</div>							
 					<div class="stack-item">
 						<a class="stack-link" href="https://twitter.com/dnwls3010/media">
-							<img class="stack-image" src="https://pbs.twimg.com/profile_images/1215640203508867072/M_c7Qdgz_400x400.jpg"></img>
+							<img class="stack-image" src="assets/images/icons/twitterpropic-dnwls3010.jpg"></img>
 							<span class="stack-text">후와리ふわり @dnwls3010</span>
 						</a>
 					</div>												
 					<div class="stack-item">
 						<a class="stack-link" href="https://twitter.com/Ixy">
-							<img class="stack-image" src="https://pbs.twimg.com/profile_images/1212051209973972992/J1JhjJCH_400x400.jpg"></img>
+							<img class="stack-image" src="assets/images/icons/twitterpropic-Ixy.jpg"></img>
 							<span class="stack-text">Ixy @Ixy</span>
 						</a>
 					</div>					
 					<div class="stack-item">
 						<a class="stack-link" href="https://twitter.com/Merryweatherey">
-							<img class="stack-image" src="https://pbs.twimg.com/profile_images/1169566661382475776/EX8mkHW2_400x400.jpg"></img>
+							<img class="stack-image" src="assets/images/icons/twitterpropic-Merryweatherey.jpg"></img>
 							<span class="stack-text">「Merry」 @Merryweatherey</span>
 						</a>
 					</div>
 					<div class="stack-item">
 						<a class="stack-link" href="https://twitter.com/sasurainopink">
-							<img class="stack-image" src="https://pbs.twimg.com/profile_images/1238741536440909824/3R4lczhK_400x400.jpg"></img>
+							<img class="stack-image" src="assets/images/icons/twitterpropic-sasurainopink.jpg"></img>
 							<span class="stack-text">牧茶 @sasurainopink</span>
 						</a>
 					</div>
 					<div class="stack-item">
 						<a class="stack-link" href="https://twitter.com/mojojoj27827860">
-							<img class="stack-image" src="https://pbs.twimg.com/profile_images/455061866524315648/-07KkKx2_400x400.jpeg"></img>
+							<img class="stack-image" src="assets/images/icons/twitterpropic-mojojoj27827860.jpeg"></img>
 							<span class="stack-text">いえすぱ @mojojoj27827860</span>
 						</a>
 					</div>							
 					<div class="stack-item">
 						<a class="stack-link" href="https://twitter.com/mu_acrt/media">
-							<img class="stack-image" src="https://pbs.twimg.com/profile_images/1280726732400517121/27FYqXEk_400x400.jpg"></img>
+							<img class="stack-image" src="assets/images/icons/twitterpropic-mu_acrt.jpg"></img>
 							<span class="stack-text">はねんぼ @mu_acrt</span>
 						</a>
 					</div>					
