upadte image fix still 404

--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
 					</div>																	
 					<div class="stack-item">
 						<a class="stack-link" href="https://twitter.com/hitsukuya/media">
-							<img class="stack-image" src="https://github.com/heyKPerks/MyAnimeProfile/blob/master/assets/images/icons/twitterpropic-hitsukuya.jpg?raw=true"></img>
+							<img class="stack-image" src="assets/images/icons/twitterpropic-hitsukuya.jpg"></img>
 							<span class="stack-text">Hitsu @hitsukuya</span>
 						</a>
 					</div>												
