--- a/index.html
+++ b/index.html
@@ -460,6 +460,24 @@
 							<span class="stack-text">Trash Taste</span>
 						</a>
 					</div>					
+					<div class="stack-item">
+						<a class="stack-link" href="https://www.youtube.com/channel/UCWSs25yYe8gZW8NnVvsBpsw">
+							<img class="stack-image" src="https://yt3.ggpht.com/a/AATXAJxKqw9pvbtPVihMYoBMthxkz-znw_ehZou8KLjY=s176-c-k-c0xffffffff-no-rj-mo"></img>
+							<span class="stack-text">Kamimashita</span>
+						</a>
+					</div>
+					<div class="stack-item">
+						<a class="stack-link" href="https://www.youtube.com/channel/UC29UF398Umfu62RUMqb9TUg">
+							<img class="stack-image" src="https://yt3.ggpht.com/a/AATXAJzPCoLbC7ur3hNGLhmRIgDsrCOzTU6s3XO0lUpz=s176-c-k-c0xffffffff-no-rj-mo"></img>
+							<span class="stack-text">GLENLOVESANIME</span>
+						</a>
+					</div>
+					<div class="stack-item">
+						<a class="stack-link" href="https://www.youtube.com/channel/UCnQjSjicyHuuwZRKIAHI8ow">
+							<img class="stack-image" src="https://yt3.ggpht.com/a/AATXAJz0BYqP2Ym6YfPBlmgZDxiolhR9PZiW4MBanD7Z0A=s176-c-k-c0xffffffff-no-rj-mo"></img>
+							<span class="stack-text">Isla McTear</span>
+						</a>
+					</div>					
 				</div>	
 				<div class="right-side-item stack-list-container">
 					<h3 class="stack-heading">Anipics on Reddit</h3>				
