--- a/index.html
+++ b/index.html
@@ -246,13 +246,13 @@
 							<div class="tile"><a href="https://kitsu.io/anime/the-legend-of-korra-book-1-air"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/11565/large.jpg?1448849149" alt="The Legend of Korra"></img></a></div>
 							<div class="tile"><a href="https://kitsu.io/anime/rwby"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/7929/large.jpg?1475799620" alt="RWBY"></img></a></div>
 							<div class="tile"><a href="https://kitsu.io/anime/wakfu-the-animated-series"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/8299/large.jpg?1418849115" alt="Wakfu"></img></a></div>
+							<div class="tile"><a href="https://kitsu.io/anime/the-dragon-prince"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42096/large.jpg?1597697086" alt="The Dragon Prince"></img></a></div>
 							<div class="tile"><a href="https://kitsu.io/anime/samurai-jack"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/7939/large.jpg?1416275562" alt="Samurai Jack"></img></a></div>
 							<div class="tile"><a href="https://www.imdb.com/title/tt2861424/?ref_=nv_sr_1"><img class="thumbnail" src="assets/images/thumbnails/rick-and-morty.png" alt="Rick and Morty"></img></a></div>
 							<div class="tile"><a href="https://www.imdb.com/title/tt7658402/?ref_=nv_sr_srsg_3"><img class="thumbnail" src="assets/images/thumbnails/harley-quinn.png" alt="Harley Quinn "></img></a></div>
 							<div class="tile"><a href="https://www.imdb.com/title/tt0149460/?ref_=nv_sr_1"><img class="thumbnail" src="assets/images/thumbnails/futurama.png" alt="Futurama"></img></a></div>
 							<div class="tile"><a href="https://www.imdb.com/title/tt1486217/?ref_=nv_sr_1"><img class="thumbnail" src="assets/images/thumbnails/archer.png" alt="Archer"></img></a></div>						
 							<div class="tile"><a href="https://kitsu.io/anime/teen-titans"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/7928/large.jpg?1416275545" alt="Teen Titans"></img></a></div>						
-							<div class="tile"><a href="https://www.imdb.com/title/tt0366005/"><img class="thumbnail" src="assets/images/thumbnails/dannyphantom.png" alt="Danny Phantom"></img></a></div>
 							<div class="tile"><a href="https://kitsu.io/anime/code-lyoko"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/7930/large.jpg?1408462959" alt="Code Lyoko"></img></a></div>
 
 							<!--<div class="tile"><a href="https://kitsu.io/anime/xiaolin-showdown"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/7931/large.jpg?1408462962" alt="Xiaolin Showdown"></img></a></div>-->						
@@ -766,12 +766,12 @@
 							</div>
 						</div>
 					</a>
-					<a class="lf-link" href="https://twitter.com/mu_acrt/media">
+					<a class="lf-link" href="https://twitter.com/uairt">
 						<div class="lf-item-container">								
-							<img class="lf-image" src="assets/images/icons/twitterpropic-mu_acrt.jpg"></img>
+							<img class="lf-image" src="assets/images/icons/twitterpropic-uairt.jpg"></img>
 							<div class="lf-text">
 								<span class="lf-displayname">はねんぼ</span>
-								<span class="lf-handle"><i class="fab fa-twitter lf-handle-icon"></i> @mu_acrt</span>
+								<span class="lf-handle"><i class="fab fa-twitter lf-handle-icon"></i> @uairt</span>
 							</div>
 						</div>
 					</a>
