--- a/index.html
+++ b/index.html
@@ -761,7 +761,7 @@
 						<div class="lf-item-container">								
 							<img class="lf-image" src="assets/images/icons/twitterpropic-mojojoj27827860.jpeg"></img>
 							<div class="lf-text">
-								<span class="lf-displayname"いえすぱ></span>
+								<span class="lf-displayname">いえすぱ</span>
 								<span class="lf-handle"><i class="fab fa-twitter lf-handle-icon"></i> @mojojoj27827860</span>
 							</div>
 						</div>
