content update and 3 collumn grid fix

--- a/index.html
+++ b/index.html
@@ -9,10 +9,16 @@
 		<!--Styles-->
 		<link rel="stylesheet" type="text/css" href="assets/styles/meyerweb-reset.css">
 		<link rel="stylesheet" type="text/css" href="assets/styles/stylesheet.css">
-		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+		<link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.13.0/css/all.css"
+      integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V"
+      crossorigin="anonymous"
+    />
 		<!--media reporter-->
 		<!--<link rel="stylesheet" type="text/css" href="assets/styles/MediaQuery-Reporter Styles.css">-->
 		<!--Scripts-->
+		
 		<script type="text/javascript" src="assets/scripts/linksdropbtn.js"></script>
 		
 	</head>
@@ -41,6 +47,7 @@
 					<div class="about-field"><i class="fas fa-map-marker-alt field-icon"></i> Cincinnati, OH</div>
 					<div class="about-field"><i class="far fa-calendar field-icon"></i> Watching Since 2002</div>
 					<div class="about-field"><i class="far fa-heart field-icon"></i> Waifu: <img class="waifu" src="assets/images/icons/waifu.png"></img> Shirayuki</div>
+					<div class="about-field"><i class="fas fa-place-of-worship field-icon"></i> Thighdeology</div>
 				</div><!-- about fields -->
 				
 				<div class="about-tags">
@@ -80,12 +87,8 @@
 							<!-- <div class="tile"><a href=""><img class="thumbnail" src="" alt=""></img></a></div> -->
 							<div class="tile"><a href="https://kitsu.io/anime/re-zero-kara-hajimeru-isekai-seikatsu-2"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42198/large.jpg?1597696997" alt="Re:ZERO Season 2"></img></a></div>
 							<div class="tile"><a href="https://kitsu.io/anime/enen-no-shouboutai-ni-no-shou"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42909/large.jpg?1597690744" alt="Fire Force Season 2"></img></a></div>					
-							<div class="tile"><a href="https://kitsu.io/anime/itai-no-wa-lya-nano-de-bougyoryoku-ni-kyokufuri-shitai-to-omoimasu"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42043/large.jpg?1597692075" alt="BOFURI: I Don’t Want to Get Hurt, so I’ll Max Out My Defense."></img></a></div>					
 							<div class="tile"><a href="https://kitsu.io/anime/kakushigoto-tv"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42722/large.jpg?1597697302" alt="Kakushigoto "></img></a></div>
-							<div class="tile"><a href="https://kitsu.io/anime/the-god-of-highschool-series"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/43018/large.jpg?1597699121" alt="The God of High School"></img></a></div>
 							<div class="tile"><a href="https://kitsu.io/anime/deca-dence"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42433/large.jpg?1597691581" alt="Deca-Dence"></img></a></div>
-							<div class="tile"><a href="https://kitsu.io/anime/kanojo-okarishimasu"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/43028/large.jpg?1597697493" alt="Rent-a-Girlfriend"></img></a></div>
-							<div class="tile"><a href="https://kitsu.io/anime/manaria-friends"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/11354/large.jpg?1597692011" alt="Mysteria Friends"></img></a></div>					
 						</div><!-- tiled-list -->
 					</div><!-- Currently Watching-->			
 					<div class="spotlight-item"><!--Currently Watching-->
@@ -192,11 +195,12 @@
 						</div><!--Fantasy-->
 						<div class="tiled-list-card">
 							<h4>Romance</h4>
-							<div class="card-tiled-list">						
-								<div class="tile"><a href="https://kitsu.io/anime/toradora"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/3532/large.jpg?1458499777" alt="Toradora!"></img></a></div>
+							<div class="card-tiled-list">													
 								<div class="tile"><a href="https://kitsu.io/anime/gekkan-shoujo-nozaki-kun"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/8402/large.jpg?1416321073" alt="Monthly Girls' Nozaki-kun"></img></a></div>
 								<div class="tile"><a href="https://kitsu.io/anime/yahari-ore-no-seishun-love-comedy-wa-machigatteiru"><img class="thumbnail" src="https://cdn.myanimelist.net/images/anime/11/49459.jpg" alt="My Teen Romantic Comedy SNAFU"></img></a></div>
 								<div class="tile"><a href="https://kitsu.io/anime/5-toubun-no-hanayome"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/41966/large.jpg?1553271462" alt="The Quintessential Quintuplets"></img></a></div>					
+								<div class="tile"><a href="https://kitsu.io/anime/kanojo-okarishimasu"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/43028/large.jpg?1597697493" alt="Rent-a-Girlfriend"></img></a></div>
+								<!--<div class="tile"><a href="https://kitsu.io/anime/toradora"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/3532/large.jpg?1458499777" alt="Toradora!"></img></a></div>-->
 								<!--<div class="tile"><a href="https://kitsu.io/anime/akagami-no-shirayuki-hime"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/10621/large.jpg?1432401413" alt="Snow White with the Red Hair"></img></a></div>-->
 							</div>
 						</div><!--Romance-->
@@ -264,7 +268,8 @@
 						<div class="tiled-list">
 							<div class="tile"><a href="https://myanimelist.net/character/18323/Shirayuki"><img class="thumbnail" src="https://media.kitsu.io/characters/images/63782/original.jpg?1485073513" alt="Shirayuki"></img></a></div>
 							<div class="tile"><a href="https://myanimelist.net/character/7373/Holo"><img class="thumbnail" src="https://media.kitsu.io/characters/images/22846/original.jpg?1483096805" alt="Holo"></img></a></div>
-							<div class="tile"><a href="https://myanimelist.net/character/147481/Yoshino_Koharu"><img class="thumbnail" src="https://cdn.myanimelist.net/images/characters/2/327894.jpg" alt="Yoshino Koharu"></img></a></div>
+							<div class="tile"><a href="https://myanimelist.net/character/161286/Chizuru_Ichinose"><img class="thumbnail" src="https://cdn.myanimelist.net/images/characters/11/402722.jpg" alt="Chizuru Ichinose"></img></a></div>
+							<!-- <div class="tile"><a href="https://myanimelist.net/character/147481/Yoshino_Koharu"><img class="thumbnail" src="https://cdn.myanimelist.net/images/characters/2/327894.jpg" alt="Yoshino Koharu"></img></a></div> -->
 							<div class="tile"><a href="https://myanimelist.net/character/69411/Kaori_Miyazono"><img class="thumbnail" src="https://media.kitsu.io/characters/images/53369/original.jpg?1483096805" alt="Kaori Miyazono"></img></a></div>
 							<div class="tile"><a href="https://myanimelist.net/character/87271/Chiyo_Sakura"><img class="thumbnail" src="https://media.kitsu.io/characters/images/40593/original.jpg?1483096805" alt="Chiyo Sakura"></img></a></div>
 							<div class="tile"><a href="https://myanimelist.net/character/129073/Yun_Iijima"><img class="thumbnail" src="https://cdn.myanimelist.net/images/characters/8/311599.jpg" alt="Yun Iijima"></img></a></div>
