--- a/index.html
+++ b/index.html
@@ -614,16 +614,7 @@
 								<span class="lf-handle"><i class="fab fa-reddit-alien lf-handle-icon"></i> /r/Pixiv</span>
 							</div>
 						</div>
-					</a>			
-					<a class="lf-link" href="https://www.reddit.com/r/anime/?f=flair_name%3A%22OC%20Fanart%22">
-						<div class="lf-item-container">								
-							<img class="lf-image" src="https://b.thumbs.redditmedia.com/3Nje2BVH25RqYFX3Aod8R26GkHFzBYTep3TddA3960Q.png"></img>
-							<div class="lf-text">
-								<span class="lf-displayname">OC Fanart</span>
-								<span class="lf-handle"><i class="fab fa-reddit-alien lf-handle-icon"></i> r/Anime OC Fanart</span>
-							</div>
-						</div>
-					</a>				
+					</a>							
 					<a class="lf-link" href="https://www.reddit.com/r/ImaginarySliceOfLife/">
 						<div class="lf-item-container">								
 							<img class="lf-image" src="https://b.thumbs.redditmedia.com/MLO5GnkT-lxqK_d-7zZjA77WCLjDq8qPjU-BpOfzWOs.png"></img>
@@ -651,12 +642,21 @@
 							</div>
 						</div>
 					</a>			
-					<a class="lf-link" href="https://www.reddit.com/r/AquaSama/">
+					<a class="lf-link" href="https://www.reddit.com/r/2DGirlsEatingCutely/">
 						<div class="lf-item-container">								
-							<img class="lf-image" src="https://styles.redditmedia.com/t5_3fzrx/styles/communityIcon_5yyq866pjiq41.jpg?width=256&format=pjpg&s=623e88facc79dd08b0eddde05760799aa92200d3"></img>
+							<img class="lf-image" src="https://styles.redditmedia.com/t5_129m04/styles/communityIcon_7jr3tqlmqvl41.png?width=256&s=fdbb19915e8d1e1e1437b669e2af523c467a985c"></img>
 							<div class="lf-text">
-								<span class="lf-displayname">r/AquaSama</span>
-								<span class="lf-handle"><i class="fab fa-reddit-alien lf-handle-icon"></i> /r/AquaSama</span>
+								<span class="lf-displayname">r/2DGirlsEatingCutely</span>
+								<span class="lf-handle"><i class="fab fa-reddit-alien lf-handle-icon"></i> /r/2DGirlsEatingCutely</span>
+							</div>
+						</div>
+					</a>			
+					<a class="lf-link" href="https://www.reddit.com/r/animehotbeverages/">
+						<div class="lf-item-container">								
+							<img class="lf-image" src="https://styles.redditmedia.com/t5_3p8sz/styles/communityIcon_8erzeq5m2on31.png?width=256&s=a003d6a3c7106dbc8da7e546a611c0c0ae4416e3"></img>
+							<div class="lf-text">
+								<span class="lf-displayname">r/animehotbeverages</span>
+								<span class="lf-handle"><i class="fab fa-reddit-alien lf-handle-icon"></i> /r/animehotbeverages</span>
 							</div>
 						</div>
 					</a>			
@@ -687,6 +687,27 @@
 							</div>
 						</div>
 					</a>			
+
+					<!--
+					<a class="lf-link" href="https://www.reddit.com/r/anime/?f=flair_name%3A%22OC%20Fanart%22">
+						<div class="lf-item-container">								
+							<img class="lf-image" src="https://b.thumbs.redditmedia.com/3Nje2BVH25RqYFX3Aod8R26GkHFzBYTep3TddA3960Q.png"></img>
+							<div class="lf-text">
+								<span class="lf-displayname">OC Fanart</span>
+								<span class="lf-handle"><i class="fab fa-reddit-alien lf-handle-icon"></i> r/Anime OC Fanart</span>
+							</div>
+						</div>
+					</a>				
+					<a class="lf-link" href="https://www.reddit.com/r/AquaSama/">
+						<div class="lf-item-container">								
+							<img class="lf-image" src="https://styles.redditmedia.com/t5_3fzrx/styles/communityIcon_5yyq866pjiq41.jpg?width=256&format=pjpg&s=623e88facc79dd08b0eddde05760799aa92200d3"></img>
+							<div class="lf-text">
+								<span class="lf-displayname">r/AquaSama</span>
+								<span class="lf-handle"><i class="fab fa-reddit-alien lf-handle-icon"></i> /r/AquaSama</span>
+							</div>
+						</div>
+					</a>							
+					-->
 				</div>
 				<div class="lf-list">
 					<h3 class="lf-heading">Anipics on Twitter</h3>							
