--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
 					<div class="watching-item"><!--Backlog Binging-->
 						<h2>Backlog Binging</h2>
 						<div class="tiled-list">
+							<div class="tile"><a href="https://kitsu.io/anime/hataraku-saibou-tv"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/14212/large.jpg?1597697195" alt="Cells at Work!"></img></a></div>
 							<div class="tile"><a href="https://kitsu.io/anime/yahari-ore-no-seishun-love-comedy-wa-machigatteiru-kan"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42194/large.jpg?1597696997" alt="My Teen Romantic Comedy SNAFU Climax"></img></a></div>
 							<div class="tile"><a href="https://kitsu.io/anime/nichijou"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/6062/large.jpg?1597696783" alt="Nichijou "></img></a></div>
 							<div class="tile"><a href="https://kitsu.io/anime/chuunibyou-demo-koi-ga-shitai"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/7160/large.jpg?1597699260" alt="Love, Chunibyo & Other Delusions!"></img></a></div> 
-							<div class="tile"><a href="https://kitsu.io/anime/runway-de-waratte"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42552/large.jpg?1597691891" alt="Smile Down the Runway"></img></a></div>
 							<div class="tile"><a href="https://kitsu.io/anime/koi-wa-ameagari-no-you-ni"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/13277/large.jpg?1597697509" alt="After the Rain"></img></a></div>
 							<div class="tile"><a href="https://kitsu.io/anime/anohana-the-flower-we-saw-that-day"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/5981/large.jpg?1597696751" alt="Anohana: The Flower We Saw That Day"></img></a></div>
 							<div class="tile"><a href="https://kitsu.io/anime/shirobako"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/8698/large.jpg?1597696859" alt="Shirobako"></img></a></div> 
@@ -113,7 +113,7 @@
 							<div class="tile"><a href="https://kitsu.io/anime/5-toubun-no-hanayome-2"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42324/large.jpg?1597697087" alt="The Quintessential Quintuplets 2"></img></a></div>
 							<div class="tile"><a href="https://kitsu.io/anime/jujutsu-kaisen"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42765/large.jpg?1601027481" alt="Jujutsu Kaisen"></img></a></div>
 							<div class="tile"><a href="https://kitsu.io/anime/majo-no-tabitabi"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42627/large.jpg?1571491060" alt="The Journey of Elaina"></img></a></div>
-							<div class="tile"><a href="https://kitsu.io/anime/kamisama-ni-natta-hi"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/43204/large.jpg?1610677358" alt="The Day I Became a God"></img></a></div>
+							<div class="tile"><a href="https://kitsu.io/anime/log-horizon-3rd-season"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42957/large.jpg?1597692116" alt="Log Horizon: Season 3"></img></a></div>
 							<div class="tile"><a href="https://kitsu.io/anime/tensei-shitara-slime-datta-ken-2"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42196/large.jpg?1597691848" alt="Reincarnated as a Slime 2"></img></a></div>
 							<div class="tile"><a href="https://kitsu.io/anime/kuma-kuma-kuma-bear"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/43214/large.jpg?1597691134" alt="The Bears Bear a Bare Kuma "></img></a></div>
 							<div class="tile"><a href="https://kitsu.io/anime/mushoku-tensei-isekai-ittara-honki-dasu"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42323/large.jpg?1571408000" alt="Mushoku Tensei: Jobless Reincarnation"></img></a></div>
@@ -131,8 +131,8 @@
 							<div class="tile"><a href="https://kitsu.io/anime/ijiranaide-nagatoro-san"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/43271/large.jpg?1593686865" alt="Don’t Toy With Me, Miss Nagatoro"></img></a></div>
 							<div class="tile"><a href="https://kitsu.io/anime/fumetsu-no-anata-e"><img class="thumbnail" src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/b114535-jEzNgKyVxLNT.jpg" alt="To Your Eternity"></img></a></div>
 							<div class="tile"><a href="https://kitsu.io/anime/isekai-maou-to-shoukan-shoujo-no-dorei-majutsu-2"><img class="thumbnail" src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx117448-IRah2GxIlwLH.jpg" alt="How Not to Summon a Demon Lord 2"></img></a></div>
+							<div class="tile"><a href="https://kitsu.io/anime/zombieland-saga-revenge"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42467/large.jpg?1609509747" alt="Zombieland Saga Revenge"></img></a></div>
 							<div class="tile"><a href="https://kitsu.io/anime/tate-no-yuusha-no-nariagari-2"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42530/large.jpg?1599926560" alt="The Rising of the Shield Hero 2"></img></a></div>
-							<div class="tile"><a href="https://kitsu.io/anime/log-horizon-3rd-season"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42957/large.jpg?1597692116" alt="Log Horizon: Season 3"></img></a></div>
 							<div class="tile"><a href="https://kitsu.io/anime/sword-art-online-progressive-movie-hoshi-naki-yoru-no-aria"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/43546/large.jpg?1600530798" alt="Sword Art Online: Progressive Movie "></img></a></div> 
 							<div class="tile"><a href="https://kitsu.io/anime/kobayashi-san-chi-no-maid-dragon-2"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42149/large.jpg?1597696965" alt=" Miss Kobayashi's Dragon Maid 2"></img></a></div> 
 						</div><!-- tiled-list -->
@@ -397,15 +397,15 @@
 							-->
 						</div>
 					</a>
-					<a class="lf-link" href="https://because.moe/">
+					<a class="lf-link" href="https://anshumanv.github.io/awesome-anime-sources/">
 						<div class="lf-item-container">								
-							<img class="lf-image" src="https://pbs.twimg.com/profile_images/648981664081711104/uUEjQfrM_400x400.png"></img>
+							<img class="lf-image" src="assets/images/icons/awesome-sources.png"></img>
 							<div class="lf-text">
-								<span class="lf-displayname">Streaming Search Engine </span>
-								<span class="lf-handle"><i class="fas fa-link lf-handle-icon"></i> because.moe</span>
+								<span class="lf-displayname">awesome-anime-sources</span>
+								<span class="lf-handle"><i class="fab fa-github lf-handle-icon"></i> anshumanv</span>
 							</div>
 						</div>
-					</a>					
+					</a>
 					<a class="lf-link" href="https://www.reddit.com/r/anime/">
 						<div class="lf-item-container">								
 							<img class="lf-image" src="https://b.thumbs.redditmedia.com/3Nje2BVH25RqYFX3Aod8R26GkHFzBYTep3TddA3960Q.png"></img>
@@ -432,7 +432,19 @@
 								<span class="lf-handle"><i class="fab fa-twitter lf-handle-icon"></i> @AIR_News01</span>
 							</div>
 						</div>
-					</a>					
+					</a>			
+
+					<!-- 
+					<a class="lf-link" href="https://because.moe/">
+						<div class="lf-item-container">								
+							<img class="lf-image" src="https://pbs.twimg.com/profile_images/648981664081711104/uUEjQfrM_400x400.png"></img>
+							<div class="lf-text">
+								<span class="lf-displayname">Streaming Search Engine </span>
+								<span class="lf-handle"><i class="fas fa-link lf-handle-icon"></i> because.moe</span>
+							</div>
+						</div>
+					</a>
+					-->							
 				</div>
 				<div class="lf-list">
 					<h3 class="lf-heading">The Dubs</h3>				
